--- a/ECommercePrototypeEnjo/ECommercePrototypeEnjo.WebClient/ECommercePrototypeEnjo.WebClient.csproj
+++ b/ECommercePrototypeEnjo/ECommercePrototypeEnjo.WebClient/ECommercePrototypeEnjo.WebClient.csproj
@@ -151,6 +151,10 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\imgs\add2.png" />
+    <Content Include="Content\imgs\btn-delete.png" />
+    <Content Include="Content\imgs\btn-remove.png" />
+    <Content Include="Content\imgs\cart.gif" />
     <Content Include="Content\imgs\No_Image_Available.gif" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
